fix monitor service page layout issue

--- a/src/components/Charts/ChartCard/index.less
+++ b/src/components/Charts/ChartCard/index.less
@@ -46,7 +46,7 @@
     color: @text-color-secondary;
     font-size: @font-size-base;
     line-height: 22px;
-    height: 22px;
+    min-height: 22px;
   }
   .action {
     cursor: pointer;
